--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 								<header id="header">
 									<a href="index.html" class="logo">Creating <strong>your</strong> dreams with code</a>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://twitter.com/kevinhalliwell4" class="icon brands fa-twitter"></a></li>
+										<li><a href="mailto:kevinhalliwell@me.com" class="icon solid fa-envelope"></a></li>
+										<li><a href="https://github.com/kevinhalliwell" class="icon brands fa-github"></a></li>
+										<li><a href="https://www.linkedin.com/in/kevin-halliwell-477432210/" class="icon brands fa-linkedin-in"></a></li>
 									</ul>
 								</header>
 
@@ -59,27 +59,27 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="https://americandiner.netlify.app/" class="image"><img src="images/diner.jpg" alt="" /></a>
 											<h3>American Diner</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<p>A fully modern and responsive restaurant site.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="https://americandiner.netlify.app/" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-											<h3>Nulla amet dolore</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<a href="https://northcarolinabees.netlify.app/" class="image"><img src="images/bee.jpg" alt="" /></a>
+											<h3>North Carolina Bees</h3>
+											<p>Modern blog and responsive bee website.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="https://northcarolinabees.netlify.app/" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-											<h3>Tempus ullamcorper</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<a href="https://bestlandscapeservices.netlify.app/" class="image"><img src="images/landscape.jpg" alt="" /></a>
+											<h3>Best Landscape Services</h3>
+											<p>An online portfolio for Landscape services.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="https://bestlandscapeservices.netlify.app/" class="button">More</a></li>
 											</ul>
 										</article>
 									</div>
