--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1>Hi, I’m Kevin,<br />
-											Your Next Software Engineer</h1>
+											<h1>Hi, I’m Kevin.<br />
+											YI'm a full-stack web developer.</h1>
 											<p>What can I build for  you today?</p>
 										</header>
 										<p></p>
 										<ul class="actions">
-											<li><a href="#work" class="button big">My Work</a></li>
+											<li><a href="#work" class="button big">View my Work</a></li>
 										</ul>
 									</div>
 									<span class="image object">
@@ -111,7 +111,7 @@
 
 							<!-- Footer -->
 								<footer id="footer">
-									<p class="copyright">&copy; Kevin Halliwell</p>
+									<p class="copyright">Kevin Halliwell &copy;2022</p>
 								</footer>
 
 						</div>
