--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 									<div class="content">
 										<header>
 											<h1>Hi, I’m Kevin.<br />
-											YI'm a full-stack web developer.</h1>
+											I'm a full-stack web developer.</h1>
 											<p>What can I build for  you today?</p>
 										</header>
 										<p></p>
