--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 											<h3>American Diner</h3>
 											<p>A fully modern and responsive restaurant site.</p>
 											<ul class="actions">
-												<li><a href="https://americandiner.netlify.app/" class="button">More</a></li>
+												<li><a href="https://americandiner.netlify.app/" class="button">View Site</a></li>
 											</ul>
 										</article>
 										<article>
@@ -71,7 +71,7 @@
 											<h3>North Carolina Bees</h3>
 											<p>Modern blog and responsive bee website.</p>
 											<ul class="actions">
-												<li><a href="https://northcarolinabees.netlify.app/" class="button">More</a></li>
+												<li><a href="https://northcarolinabees.netlify.app/" class="button">View Site</a></li>
 											</ul>
 										</article>
 										<article>
@@ -79,7 +79,7 @@
 											<h3>Best Landscape Services</h3>
 											<p>An online portfolio for Landscape services.</p>
 											<ul class="actions">
-												<li><a href="https://bestlandscapeservices.netlify.app/" class="button">More</a></li>
+												<li><a href="https://bestlandscapeservices.netlify.app/" class="button">View Site</a></li>
 											</ul>
 										</article>
 									</div>
