--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1>Hi, I’m Kevin.<br />
+											<h1>Hi, I'm Kevin.<br />
 											I'm a full-stack web developer.</h1>
 											<p>What can I build for  you today?</p>
 										</header>
@@ -48,7 +48,7 @@
 										</ul>
 									</div>
 									<span class="image object">
-										<img src="images/profile.jpg" alt="" />
+										<img src="images/profile2.jpg" alt="" />
 									</span>
 								</section>
 
