--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@
 									</header>
 									<div class="posts">
 										<article>
+											<a href="https://nasadailyphotos.netlify.app/" class="image"><img src="images/nasa.jpg" alt="" /></a>
+											<h3>Daily Astronomy Photo</h3>
+											<p>A site built using Nasa's Api to pull a random daily photo.</p>
+											<ul class="actions">
+												<li><a href="https://nasadailyphotos.netlify.app/" class="button">View Site</a></li>
+											</ul>
+										</article>
+										<article>
 											<a href="https://americandiner.netlify.app/" class="image"><img src="images/diner.jpg" alt="" /></a>
 											<h3>American Diner</h3>
 											<p>A fully modern and responsive restaurant site.</p>
