--- a/index.html
+++ b/index.html
@@ -59,35 +59,43 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="https://nasadailyphotos.netlify.app/" class="image"><img src="images/nasa.jpg" alt="" /></a>
+											<a href="https://nasadailyphotos.netlify.app/" class="image" target="_blank"><img src="images/nasa.jpg" alt="nasa.jpg" /></a>
 											<h3>Daily Astronomy Photo</h3>
 											<p>A site built using Nasa's Api to pull a random daily photo.</p>
 											<ul class="actions">
-												<li><a href="https://nasadailyphotos.netlify.app/" class="button">View Site</a></li>
+												<li><a href="https://nasadailyphotos.netlify.app/" class="button" target="_blank">View Site</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="https://americandiner.netlify.app/" class="image"><img src="images/diner.jpg" alt="" /></a>
+											<a href="https://crypto-price-checker.netlify.app/" class="image" target="_blank"><img src="images/trading.jpg" alt="trading.jpg" /></a>
+											<h3>Crypto Price Checker</h3>
+											<p>A crpto price check site built using coincap and poliniex crypto api's.</p>
+											<ul class="actions">
+												<li><a href="https://crypto-price-checker.netlify.app/" class="button" target="_blank">View Site</a></li>
+											</ul>
+										</article>
+										<article>
+											<a href="https://americandiner.netlify.app/" class="image" target="_blank"><img src="images/diner.jpg" alt="diner.jpg" /></a>
 											<h3>American Diner</h3>
 											<p>A fully modern and responsive restaurant site.</p>
 											<ul class="actions">
-												<li><a href="https://americandiner.netlify.app/" class="button">View Site</a></li>
+												<li><a href="https://americandiner.netlify.app/" class="button" target="_blank">View Site</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="https://northcarolinabees.netlify.app/" class="image"><img src="images/bee.jpg" alt="" /></a>
+											<a href="https://northcarolinabees.netlify.app/" class="image" target="_blank"><img src="images/bee.jpg" alt="bee.jpg" /></a>
 											<h3>North Carolina Bees</h3>
 											<p>Modern blog and responsive bee website.</p>
 											<ul class="actions">
-												<li><a href="https://northcarolinabees.netlify.app/" class="button">View Site</a></li>
+												<li><a href="https://northcarolinabees.netlify.app/" class="button" target="_blank">View Site</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="https://bestlandscapeservices.netlify.app/" class="image"><img src="images/landscape.jpg" alt="" /></a>
+											<a href="https://bestlandscapeservices.netlify.app/" class="image" target="_blank"><img src="images/landscape.jpg" alt="landscape.jpg" /></a>
 											<h3>Best Landscape Services</h3>
 											<p>An online portfolio for Landscape services.</p>
 											<ul class="actions">
-												<li><a href="https://bestlandscapeservices.netlify.app/" class="button">View Site</a></li>
+												<li><a href="https://bestlandscapeservices.netlify.app/" class="button" target="_blank">View Site</a></li>
 											</ul>
 										</article>
 									</div>
